@@ -24,7 +24,7 @@ foreach (module_list() as $module) {
 function filefield_paths_form_alter(&$form) {
   // Force all File (Field) Paths uploads to go to the temporary file system
   // prior to being processed.
-  if (isset($form['#entity']) && $form['#type'] == 'form') {
+  if (isset($form['#entity']) && isset($form['#entity_type']) && isset($form['#bundle']) && $form['#type'] == 'form') {
     $instances = field_info_instances($form['#entity_type'], $form['#bundle']);
     foreach ($instances as $field_name => $field) {
       if (isset($field['settings']['filefield_paths_enabled']) && $field['settings']['filefield_paths_enabled']) {
@@ -574,6 +574,7 @@ function filefield_paths_process_string($value, $data, $settings = array()) {
         $basename             = drupal_basename($path);
         $extension            = preg_match('/\.[^.]+$/', $basename, $matches) ? $matches[0] : NULL;
         $pathinfo['filename'] = !is_null($extension) ? drupal_substr($basename, 0, drupal_strlen($basename) - drupal_strlen($extension)) : $basename;
+
         if ($remove_slashes) {
           $path = '';
           if (!empty($pathinfo['dirname']) && $pathinfo['dirname'] !== '.') {
