@@ -39,6 +39,14 @@ class FileFieldPathsTestCase extends FileFieldTestCase {
   }
 
   /**
+   * @inheritdoc
+   */
+  function createFileField($name, $type_name, $field_settings = array(), $instance_settings = array(), $widget_settings = array()) {
+    parent::createFileField($name, $type_name, $field_settings, $instance_settings, $widget_settings);
+    $this->drupalPost("admin/structure/types/manage/{$this->content_type}/fields/{$name}", array(), t('Save settings'));
+  }
+
+  /**
    * Creates a new image field.
    *
    * @param $name
@@ -77,6 +85,7 @@ class FileFieldPathsTestCase extends FileFieldTestCase {
     $instance['settings']           = array_merge($instance['settings'], $instance_settings);
     $instance['widget']['settings'] = array_merge($instance['widget']['settings'], $widget_settings);
     field_create_instance($instance);
+    $this->drupalPost("admin/structure/types/manage/{$this->content_type}/fields/{$name}", array(), t('Save settings'));
   }
 }
 
@@ -135,6 +144,8 @@ class FileFieldPathsGeneralTestCase extends FileFieldPathsTestCase {
    * Test a basic file upload with File (Field) Paths.
    */
   public function testUploadFile() {
+    $langcode = LANGUAGE_NONE;
+
     // Create a File field with 'node/[node:nid]' as the File path and
     // '[node:nid].[file:ffp-extension-original]' as the File name.
     $field_name                                                 = drupal_strtolower($this->randomName());
@@ -142,9 +153,23 @@ class FileFieldPathsGeneralTestCase extends FileFieldPathsTestCase {
     $instance_settings['filefield_paths']['file_name']['value'] = '[node:nid].[file:ffp-extension-original]';
     $this->createFileField($field_name, $this->content_type, array(), $instance_settings);
 
-    // Create a node with a test file.
+    // Upload a file to a node.
     $test_file = $this->getTestFile('text');
-    $nid       = $this->uploadNodeFile($test_file, $field_name, $this->content_type);
+    $this->drupalGet("node/add/{$this->content_type}");
+    $edit['title']                              = $this->randomName();
+    $edit["files[{$field_name}_{$langcode}_0]"] = $test_file->uri;
+    $this->drupalPost(NULL, $edit, t('Upload'));
+
+    // Ensure that the file was put into the Temporary file system.
+    $this->assertRaw(file_create_url("temporary://filefield_paths/{$test_file->filename}"), t('File has been uploaded to the temporary file system.'));
+
+    // Save the node.
+    $this->drupalPost(NULL, array(), t('Save'));
+
+    // Get created Node ID.
+    $matches = array();
+    preg_match('/node\/([0-9]+)/', $this->getUrl(), $matches);
+    $nid = $matches[1];
 
     // Ensure that the File path has been processed correctly.
     $this->assertRaw("{$this->public_files_directory}/node/{$nid}/{$nid}.txt", t('The File path has been processed correctly.'));
@@ -296,7 +321,6 @@ class FileFieldPathsGeneralTestCase extends FileFieldPathsTestCase {
     $field_name                                                 = drupal_strtolower($this->randomName());
     $instance_settings['filefield_paths']['file_path']['value'] = 'node/[node:nid]';
     $this->createFileField($field_name, $this->content_type, array(), $instance_settings);
-    $this->drupalPost("admin/structure/types/manage/{$this->content_type}/fields/{$field_name}", array(), t('Save settings'));
 
     // Create a node with a test file.
     $test_file = $this->getTestFile('text');
